# translate_ai

./: README.md  pyproject.toml
scripts/: build.ps1
translator/: chunker.py  epub_reader.py  exporter.py  gui_app.py  main.py  openai_translator.py  pdf_reader.py  pipeline.py  types.py
